[package]
name = "interviewpuzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
csv = "1.1.6"
rust_decimal = "1.22.0"
serde = { version = "1.0.136", features = ["derive"] }
trycmd = "0.12.2"
typestate = "0.8.0"
